fixed issues with chat alignment

--- a/public/bootstrap/less/trp3Chat.less
+++ b/public/bootstrap/less/trp3Chat.less
@@ -1,15 +1,16 @@
 .trpChatInputArea {
-	margin-bottom: 30px;
+	margin-bottom: 40px;
 }
 
 .trpChatInputBox {
 	background-color: white;
-	height: 48px;
+	height: 58px;
 	vertical-align: top;
-	width: 400px;
+	width: 404px;
 	border-radius: 5px 5px 5px 5px;
-	margin-left: 12px;
+	margin-left: 16px;
 }
+
 
 .trpChatInputBoxTextArea {
 	width: 390px;
@@ -19,6 +20,7 @@
 	padding-left: 5px;
 	border: 0px;
 	resize: none;
+	margin: 5px;
 }
 
 .trpChatItem {
